--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+DW+Pica:ital@0;1&display=swap');
+
 *
 {
     margin: 0;
@@ -8,6 +10,7 @@ html,
 body
 {
     overflow: hidden;
+    font-family: 'IM Fell DW Pica', serif;
 }
 
 .webgl
